Added delete and put for users
