# routes/jornal.js
@@ -3,10 +3,11 @@ const router = express.Router();
 
 const jornalController = require('../controllers/jornal');
 
-// router.get('/:username', jornalController.getAllEntriesForUser);
-
-// router.get('/:id', jornalController.getEntry);
-
 router.post('/', jornalController.create);
+
+// router.get('/:username', jornalController.getAllEntriesForUser);
+// router.get('/:id', jornalController.getEntry);
+// router.put('/:id', jornalController.updateEntry);
+// router.delete('/:id', jornalController.deleteEntry);
 
 module.exports = router;
